--- a/Landing Page/css/prorecruit.css
+++ b/Landing Page/css/prorecruit.css
@@ -1,16 +1,7 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic);
+@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic,400italic,600italic);
 
-@import url(//fonts.googleapis.com/css?family=Kaushan+Script);
-/*! 
- *   AdminLTE v1.2
- *   Author: AlmsaeedStudio.com
- *   License: Open source - MIT
- *           Please visit http://opensource.org/licenses/MIT for more information
-!*/
-/*
-    Core: General style
-----------------------------
-*/
+@import url(http://fonts.googleapis.com/css?family=Kaushan+Script);
+
 html,
 body {
   overflow-x: hidden!important;
