--- a/Landing Page/view/addjob.html
+++ b/Landing Page/view/addjob.html
@@ -1,6 +1,7 @@
     <!DOCTYPE html>
     <html>
         <head>
+		<link href="../css/prorecruit.css" rel="stylesheet" type="text/css" />
     <script src="../js/jquery.min.js"></script>
            </head>
         <body>
@@ -73,6 +74,7 @@
             <script src="../js/bootstrap.min.js" type="text/javascript"></script>
             <!-- AdminLTE App -->
             <script src="../js/prorecruit/app.js" type="text/javascript"></script>
+			 <script src="../js/prorecruit/demo.js" type="text/javascript"></script>
             <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
             <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>     
           </body>
