--- a/Landing Page/view/admincompanydetails.html
+++ b/Landing Page/view/admincompanydetails.html
@@ -1,8 +1,8 @@
 
 <html>
 <head>
-<script src="jquery.min.js"></script>
- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script> </head>
+<script src="../js/jquery.min.js"></script>
+ </head>
 <script>
 	$(document).ready(function(e){
 		$("#edit_companydetails").hide();
@@ -46,19 +46,19 @@
                                            
                                 </div><!-- /.box-body -->
 								
-                            </div><!-- /erf-->	</section>
+                            </div> </section>
         
  
 
             <!-- jQuery 2.0.2 -->
           <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
             <!-- jQuery UI 1.10.3 -->
-            <script src="js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+            <script src="../js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
             <!-- Bootstrap -->
-            <script src="js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="../js/bootstrap.min.js" type="text/javascript"></script>
             <!-- AdminLTE App -->
-            <script src="js/AdminLTE/app.js" type="text/javascript"></script>
+            <script src="../js/prorecruit/app.js" type="text/javascript"></script>
             <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-            <script src="js/AdminLTE/dashboard.js" type="text/javascript"></script>     
+            <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>     
           </body>
     </html>   
