--- a/Landing Page/view/promote.html
+++ b/Landing Page/view/promote.html
@@ -1,7 +1,7 @@
     <!DOCTYPE html>
     <html>
         <head>
-    <script src="jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
            </head>
         <body>
 <!-- Promote Job -->
@@ -50,12 +50,12 @@
  <!-- jQuery 2.0.2 -->
           <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
             <!-- jQuery UI 1.10.3 -->
-            <script src="js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+            <script src="../js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
             <!-- Bootstrap -->
-            <script src="js/bootstrap.min.js" type="text/javascript"></script>
+            <script src="../js/bootstrap.min.js" type="text/javascript"></script>
             <!-- AdminLTE App -->
-            <script src="js/AdminLTE/app.js" type="text/javascript"></script>
+            <script src="../js/prorecruit/app.js" type="text/javascript"></script>
             <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-            <script src="js/AdminLTE/dashboard.js" type="text/javascript"></script>     
+            <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>     
           </body>
     </html>      
