--- a/Landing Page/view/ongoing.html
+++ b/Landing Page/view/ongoing.html
@@ -41,7 +41,7 @@
     </head>
     <body>
             <!-- Ongoing Vacancies-->
-            <section class="col-lg-6 connectedSortable">
+            <section class="col-lg-6">
                 <div class="box box-success" id="loading-example">
                     <div class="box-header">
                         <!-- tools box -->
