--- a/Landing Page/view/employeedetails.html
+++ b/Landing Page/view/employeedetails.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <script src="../js/jquery.min.js"></script>
+    <script src="../viewModel/vm_employeedetails.js"></script>
+    <script src="../js/knockout.js"></script>
  
 <script>
 	$(document).ready(function(e){
@@ -11,11 +13,15 @@
 			$("#show_employeedetails").toggle();
 		});
 	});
-</script>
+</script><script>
+   $(document).ready(function(){
+   ko.applyBindings(viewModel);
+   });
+   </script>
  </head>
 <body>
     <!-- Employee Requisition Form-->
-	<section class="col-lg-6 connectedSortable"> 
+	<section class="col-lg-6 "> 
                             
                             <div class="box box-primary" id="loading-example">
                                 <div class="box-header">
@@ -36,14 +42,16 @@
                                                                           
 									<div id="edit_employeedetails" class="form-group">
 									<h3>Employees:</h3>
-									<h4>Bhubaneswar</h4><input type="text" ng-model="bbsr_empl" />
-									<h4>Hyderabad</h4><input type="text" ng-model="hyd_empl" />
-									<h4>Florida</h4><input type="text" ng-model="florida_empl" /><br><br>
+									<h4>Bhubaneswar</h4><input type="text" data-bind="value:bbsr_emp" />
+									<h4>Hyderabad</h4><input type="text" data-bind="value:hyd_emp" />
+									<h4>Florida</h4><input type="text" data-bind="value:florida_emp" /><br><br>
 									<button class="btn btn-warning btn-sm">Save</button>
 									<button class="btn btn-warning btn-sm">Discard</button>
 									</div>
 									<div id="show_employeedetails" class="form-group">
-									<h4>Employees</h4><br><p>Bhubaneswar: {{bbsr_empl}}<br>Hyderabad: {{hyd_empl}}<br>Florida: {{florida_empl}}</p>
+									<h4>Employees</h4><br><p>Bhubaneswar: <span data-bind="text:bbsr_emp"></span>
+                                        <br>Hyderabad: <span data-bind="text:hyd_emp"></span>
+                                        <br>Florida: <span data-bind="text:florida_emp"></span></p>
 									</div>
                                         
                                            
@@ -63,5 +71,6 @@
             <script src="../js/prorecruit/app.js" type="text/javascript"></script>
             <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
             <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>     
+            
           </body>
     </html>   
