--- a/Landing Page/view/Round_schedule.html
+++ b/Landing Page/view/Round_schedule.html
@@ -5,14 +5,19 @@
 				<section>
 					<div class="row">
                         <div class="col-lg-6 ">
-                            <div class="box box-success">
+                              <div class="box box-primary" style="padding-top:5px">
                                 <div class="box-header">
+                                    <!-- tools box -->
+                                    <div class="pull-right ">
 
-									<!--tools-->
-									<div class="pull-right box-tools">
+                                         <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
                                         <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='expand' data-toggle="tooltip" title="Expand" style="display:none"><i class="fa fa-plus"></i></button>
                                         <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
+										
+
                                     </div><!-- /. tools -->
+                                   
 									
 									<div class="form-group"><h3><label>ROUND-2 Details</label></h3>
 									</div>
