--- a/Landing Page/view/admincompanydetails.html
+++ b/Landing Page/view/admincompanydetails.html
@@ -20,17 +20,20 @@
 </script>
  <body>
     <!-- Employee Requisition Form-->
-	<section class="col-lg-6 connectedSortable"> 
+	<section class="col-lg-6 "> 
                             
-                            <div class="box box-primary" id="loading-example">
+                            <div class="box box-primary" style="padding-top:5px">
                                 <div class="box-header">
                                     <!-- tools box -->
-                                    <div class="pull-right box-tools">
+                                    <div class="pull-right ">
+
                                         <button id="edit12" class="btn btn-danger btn-sm" data-widget="edit" data-toggle="tooltip" title="Edit"><i class="fa fa-pencil"></i></button>
-                                         <button class="btn btn-danger btn-sm refresh-btn" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
+                                         <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
                                         <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='expand' data-toggle="tooltip" title="Expand" style="display:none"><i class="fa fa-plus"></i></button>
                                         <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
 										
+
                                     </div><!-- /. tools -->
                                    
 
