--- a/Landing Page/view/index.html
+++ b/Landing Page/view/index.html
@@ -168,11 +168,20 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
+                    <a href="#" class="navbar-btn sidebar-toggle" style="display:none" data-toggle="oncanvas" role="button">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
                 <div class="navbar-right">
                     <ul class="nav navbar-nav">
                         <!-- User Account: style can be found in dropdown.less -->
                         <li class="dropdown user user-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <a href="#" class="check_admin">
+                                <i class="glyphicon glyphicon-user"></i>
+                                <span>Admin<i class="caret"></i></span>
+                            </a> <a href="#" class="check_admin1" style="display:none">
                                 <i class="glyphicon glyphicon-user"></i>
                                 <span>Admin<i class="caret"></i></span>
                             </a>
@@ -324,7 +333,7 @@
             <!-- Right side column. Contains the navbar and content of the page -->
             
 			
-			<aside class="right-side">
+			<aside class="right-side item_no_menu">
                 <section class="content-header">
                     <h1>
                         Dashboard
