--- a/Landing Page/view/mydb.html
+++ b/Landing Page/view/mydb.html
@@ -14,16 +14,21 @@
 	  
 	  <!-- CANDIDATE DATABASE -->                
                          
-                    <section  class="col-lg-12 connectedSortable"> 
+                    <section  class="col-lg-12 "> 
                         
-                            <div class="box box-primary">
+                             <div class="box box-primary" style="padding-top:5px">
                                 <div class="box-header">
                                     <!-- tools box -->
-                                       <div class="pull-right box-tools">
-                                           <button class="btn btn-danger btn-sm refresh-btn" data-toggle="tooltip"><i class="fa fa-refresh"></i></button>
-                                           <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip"><i class="fa fa-minus"></i></button>
-                                           <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" ><i class="fa fa-times"></i></button>
-                                       </div><!-- /. tools -->
+                                    <div class="pull-right ">
+
+                                         <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='expand' data-toggle="tooltip" title="Expand" style="display:none"><i class="fa fa-plus"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
+										
+
+                                    </div><!-- /. tools -->
+                                   
                                     <h3 class="box-title">Candidates</h3>                                    
                                 </div><!-- /.box-header -->
                                 <div class="box-body">
