--- a/Landing Page/view/ongoing.html
+++ b/Landing Page/view/ongoing.html
@@ -42,14 +42,19 @@
     <body>
             <!-- Ongoing Vacancies-->
             <section class="col-lg-6">
-                <div class="box box-success" id="loading-example">
-                    <div class="box-header">
-                        <!-- tools box -->
-                        <div class="pull-right box-tools">
-                            <button class="btn btn-danger btn-sm refresh-btn" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
-                            <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
-                            <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
-                        </div><!-- /. tools -->
+                  <div class="box box-primary" style="padding-top:5px">
+                                <div class="box-header">
+                                    <!-- tools box -->
+                                    <div class="pull-right ">
+
+                                         <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='collapse' data-toggle="tooltip" title="Collapse"><i class="fa fa-minus"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='expand' data-toggle="tooltip" title="Expand" style="display:none"><i class="fa fa-plus"></i></button>
+                                        <button class="btn btn-danger btn-sm" data-widget='remove' data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
+										
+
+                                    </div><!-- /. tools -->
+                                   
                         <i class="fa fa-briefcase"></i>
                         <h3 class="box-title">Ongoing Vacancies</h3>
                       </div><!-- /.box-header -->
