--- a/Landing Page/view/addjob.html
+++ b/Landing Page/view/addjob.html
@@ -51,8 +51,8 @@
                                             <input type="text" class="form-control" placeholder="Enter Job Designation">
                                         </div>
 										<div class="form-group">
-                                            <label>Skills Required</label></div>
-                                           <ul id="skills_select" class="list-group"></ul>
+                                            <label>Skills Required</label>
+                                           <ul id="skills_select" class="list-group"></ul></div>
 <!--											<a>Add Skills >>> </a>-->
                                         
 										<!-- textarea -->
