--- a/Landing Page/view/index.html
+++ b/Landing Page/view/index.html
@@ -10,7 +10,10 @@
       
         <link href="../css/prorecruit.css" rel="stylesheet" type="text/css" />
        <script src="../js/jquery.min.js"></script>
-	   
+	    <script src="../js/jquery-ui-1.10.3.min.js"></script>
+            <script src="../js/tagit/tagit.js"></script>
+            <link href="../css/tag/tagit-blue.css" rel="stylesheet"/>
+            
 	       <script type="text/JavaScript">
                $(function(e){var i=0;
                     $("#a_newuser").click(function(e){ 
