--- a/Landing Page/css/tag/tagit-blue.css
+++ b/Landing Page/css/tag/tagit-blue.css
@@ -75,15 +75,15 @@ ul.tagit.ui-sortable li.tagit-choice a.ui-icon.ui-icon-grip-dotted-vertical{
 }
 
 ul.tagit li.tagit-choice {
-    border: 1px solid #4b99ed;
+    border: 1px solid #00C0EF;
     display: inline-block;
     text-decoration: none;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
     padding: 1px 7px;
-    font-family: sans-serif;
-    font-size: 18px;
-    line-height: 24px;
-    height: 24px;
+    font-family:sans-serif;
+    font-size: 13px;
+    line-height: 20px;
+    height: 23px;
     vertical-align: middle;
 
     -webkit-border-radius: 4px;
@@ -95,14 +95,14 @@ ul.tagit li.tagit-choice {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), inset 0 1px 0 0 rgba(255, 255, 255, 0.4);
     padding: 4px 13px 4px 7px;
 
-    background: #4bc2ed;
-    background: -moz-linear-gradient(top, #4bc2ed 0%, #2ea2cc 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4bc2ed), color-stop(100%,#2ea2cc));
-    background: -webkit-linear-gradient(top, #4bc2ed 0%,#2ea2cc 100%);
-    background: -o-linear-gradient(top, #4bc2ed 0%,#2ea2cc 100%);
-    background: -ms-linear-gradient(top, #4bc2ed 0%,#2ea2cc 100%);
-    background: linear-gradient(top, #4bc2ed 0%,#2ea2cc 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4bc2ed', endColorstr='#2ea2cc',GradientType=0 );
+    background: #00C0EF;
+    background: -moz-linear-gradient(top, #00C0EF 0%, #00C0EF 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4bc2ed), color-stop(100%,#00C0EF));
+    background: -webkit-linear-gradient(top, #4bc2ed 0%,#00C0EF 100%);
+    background: -o-linear-gradient(top, #4bc2ed 0%,#00C0EF 100%);
+    background: -ms-linear-gradient(top, #4bc2ed 0%,#00C0EF 100%);
+    background: linear-gradient(top, #4bc2ed 0%,#00C0EF 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4bc2ed', endColorstr='#00C0EF' ,GradientType=0 );
 
 }
 
