--- a/Landing Page/view/addnew.html
+++ b/Landing Page/view/addnew.html
@@ -39,7 +39,7 @@
 <div>
 <label for="UserRole">User Role
 <div class="">
-                                          <input type="checkbox"/>&nbsp;&nbsp; <label>
+                                          <input type="checkbox" style="opacity:1; position:absolute;"/>&nbsp;&nbsp; <label>
                                                HOD</label>
                                            
 </div>
