--- a/Landing Page/view/Round_schedule.html
+++ b/Landing Page/view/Round_schedule.html
@@ -1,5 +1,10 @@
 
-
+   <!DOCTYPE html>
+    <html>
+        <head>
+    <script src="../js/jquery.min.js"></script>
+           </head>
+        <body>
 
 
 				<section>
@@ -176,6 +181,18 @@
 
 
 
+<!-- jQuery 2.0.2 -->
+          <!--  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+            <!-- jQuery UI 1.10.3 -->
+            <script src="../js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+            <!-- Bootstrap -->
+            <script src="../js/bootstrap.min.js" type="text/javascript"></script>
+            <!-- AdminLTE App -->
+            <script src="../js/prorecruit/app.js" type="text/javascript"></script>
+            <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+            <script src="../js/prorecruit/dashboard.js" type="text/javascript"></script>     
+          </body>
+    </html>      
 
 
 
