--- a/Landing Page/view/approved.html
+++ b/Landing Page/view/approved.html
@@ -5,7 +5,7 @@
   <script>
       $("#proceed1, #proceed2, #proceed3, #proceed4").click(function(e){ e.preventDefault();
                                                             $("#first0").append("<div id='xyz'></div>");
-                                                                $("#xyz").load("Round_schedule.html");
+                                                                $("#xyz").load();
                                                                });
       $("#promote1, #promote2, #promote3, #promote4").click(function(e){ e.preventDefault();
                                                             $("#first0").append("<div id='abc'></div>");
