--- a/Landing Page/view/index.html
+++ b/Landing Page/view/index.html
@@ -7,6 +7,7 @@
         <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
      
         <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+         <link href="../css/dataTables.bootstrap.css" rel="stylesheet" type="text/css" />
       
         <link href="../css/prorecruit.css" rel="stylesheet" type="text/css" />
        <script src="../js/jquery.min.js"></script>
@@ -30,7 +31,7 @@
                         $('#first'+i+'').load("requisition.html");
                        i++;
                     });
-                    $("#editprofile").click(function(e){ 
+                    $(".editprofile").click(function(e){ 
                         e.preventDefault();
                          $("#content_blocks").prepend('<div id="first'+i+'"></div>');
                          $('#first'+i+'').load("editprofile.html");
@@ -77,6 +78,13 @@
                         i++;
                         
                     });
+                             $("#closed").click(function(e){ 
+                        e.preventDefault();
+                         $("#content_blocks").prepend('<div id="first'+i+'"></div>');
+                         $('#first'+i+'').load("closed.html");
+                        i++;
+                    }); 
+                             
                              $("#existing_users").click(function(e){ 
                         e.preventDefault();
                          $("#content_blocks").prepend('<div id="first'+i+'"></div>');
@@ -206,7 +214,7 @@
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header bg-light-blue">
-                                    <img src="img/admin.png" class="img-circle" alt="User Image" />
+                                    <img src="../img/admin.png" class="img-circle" alt="User Image" />
                                     <p>
                                         Admin
                                     </p>
@@ -214,10 +222,10 @@
                                 <!-- Menu Footer-->
                                 <li class="user-footer">
                                     <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">Edit Profile</a>
+                                        <a href="#" class="btn btn-default btn-flat editprofile">Edit Profile</a>
                                     </div>
                                     <div class="pull-right">
-                                        <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                        <a href="../../../RMS/" class="btn btn-default btn-flat">Sign out</a>
                                     </div>
                                 </li>
                             </ul>
@@ -255,7 +263,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="" id="editprofile">
+                            <a href="" class="editprofile">
                                 <i class="fa fa-gear"></i> <span>Edit Profile</span>
                             </a>
                         </li>
@@ -289,7 +297,7 @@
                                 <li><a href="" class="all_vacancies"><i class="fa fa-angle-double-right"></i> All</a></li>
                                 <li><a href="" id="approved"><i class="fa fa-angle-double-right"></i> Approved</a></li>
                                 <li><a href="" id="ongoing"><i class="fa fa-angle-double-right"></i> Ongoing</a></li>
-                                <li><a id="closed" href=""><i class="fa fa-angle-double-right"></i> Closed</a></li>
+                                <li><a href="" id="closed"><i class="fa fa-angle-double-right"></i> Closed</a></li>
                                
                             </ul>
                         </li>
@@ -379,8 +387,8 @@
                                        Demographics
                                     </p>
                                 </div>
-                                <div class="icon">
-                                    <i class="ion ion-stats-bars"></i>
+                                <div class="icon"  style="padding-bottom:20px; padding-right:15px;">
+                                    <i class="glyphicon glyphicon-stats"></i>
                                 </div>
                                 <a href="" class="small-box-footer companydetails">
                                     More info <i class="fa fa-arrow-circle-right"></i>
@@ -399,8 +407,8 @@
                                         Employees
                                     </p>
                                 </div>
-                                <div class="icon">
-                                    <i class="ion ion-stats-bars"></i>
+                                <div class="icon" style="padding-bottom:20px; padding-right:15px;">
+                                    <i class="glyphicon glyphicon-stats"></i>
                                 </div>
                                 <a  href="" class=" employeedetail small-box-footer">
                                     More info <i class="fa fa-arrow-circle-right"></i>
@@ -418,8 +426,8 @@
                                         Vacancies
                                     </p>
                                 </div>
-                                <div class="icon">
-                                    <i class="ion ion-briefcase"></i>
+                                <div class="icon" style="padding-bottom:8px; padding-right:15px;">
+                                    <i class="fa fa-briefcase"></i>
                                 </div>
                                 <a href="#" class="all_vacancies small-box-footer">
                                     More info <i class="fa fa-arrow-circle-right"></i>
@@ -437,8 +445,8 @@
                                         Scheduler
                                     </p>
                                 </div>
-                                <div class="icon">
-                                    <i class="ion ion-ios7-calendar"></i>
+                                <div class="icon" style="padding-bottom:20px; padding-right:15px;">
+                                    <i class="fa fa-calendar"></i>
                                 </div>
                                 <a href="#" class="small-box-footer">
                                     More info <i class="fa fa-arrow-circle-right"></i>
