--- a/Landing Page/view/promote.html
+++ b/Landing Page/view/promote.html
@@ -5,10 +5,10 @@
            </head>
         <body>
 <!-- Promote Job -->
-							<section class="col-lg-6 ">
-                              <div class="box box-primary" style="padding-top:5px">
+							<section class="col-lg-6 connectedSortable">
+                            <div class="box box-success" id="loading-example" style="height:500px">
                                 <div class="box-header">
-                                    <!-- tools box -->
+                                   <!-- tools box -->
                                     <div class="pull-right ">
 
                                          <button class="btn btn-danger btn-sm refresh-btn" data-widget="refresh" data-toggle="tooltip" title="Reload"><i class="fa fa-refresh"></i></button>
@@ -18,7 +18,6 @@
 										
 
                                     </div><!-- /. tools -->
-                                   
                                     <i class="ion ion-person-add"></i>
 
                                     <h3 class="box-title">Promote Job</h3>
